--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 $font-family-base: "Poppins", sans-serif;
+$font-size-base: .9rem;
 
 $border-radius: 0rem;
 
@@ -16,14 +17,16 @@ $nav-link-hover-color: white;
 $offcanvas-horizontal-width: 240px;
 $offcanvas-bg-color: $primary;
 $offcanvas-transition-duration: .4s;
-$offcanvas-padding-y: .7rem;
-$offcanvas-color: white;
 
-$dropdown-item-padding-y: 1rem;
+$dropdown-item-padding-y: .6rem;
 
 @import "~bootstrap/scss/bootstrap.scss";
 
 @import "~react-toastify/dist/ReactToastify.min.css";
+
+body {
+    background-color: $light;
+}
 
 main {
     transition: $offcanvas-transition-duration ease-in-out;
@@ -36,5 +39,4 @@ button, a {
 section {
     height: 100vh;
     width: auto;
-    background-color: $light;
 }
