--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,6 +4,7 @@ $font-family-base: "Poppins", sans-serif;
 $font-size-base: .9rem;
 
 $border-radius: 0rem;
+$border-radius-lg: 0rem;
 
 $light: #f5f5f5;
 $primary: #0f1626;
